# twitter-monitor-ai

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
app/: main.py
app/api/: main.py
app/api/v1/routers/: twitter.py
app/core/: settings.py
app/domain/models/: tweet.py
app/domain/schemas/: tweet.py
app/infrastructure/services/: twitter_service.py
app/interfaces/: twitter_scraper.py
app/use_cases/: fetch_tweets.py
