[project]
name = "twitter-monitor-ai"
version = "0.1.0"
description = "Intelligent Daily Twitter Monitoring System"
authors = [
    {name = "Samir Hinojosa", email = "samirhinojosa@gmail.com"}
]
license = {text = "Apache-2.0 license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false